# closet

./: Cargo.toml  index.html
src/: axum_htmx.rs  main.rs
static/: index.html
templates/: combo.html
