[package]
name = "closet"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
axum = "0.6.18"
rand = "0.8.5"
serde = { version = "1.0", features=["derive"]}
serde_urlencoded = "0.7.1"
shuttle-axum = "0.24.0"
shuttle-runtime = "0.24.0"
shuttle-secrets = "0.24.0"
silkenweb = "0.5.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "uuid"]}
tokio = "1.28.2"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
