[package]
name = "closet"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.0"
async-trait = "0.1.73"
axum = "0.6.18"
rand = "0.8.5"
serde = { version = "1.0", features=["derive"]}
serde_urlencoded = "0.7.1"
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-secrets = "0.25.0"
shuttle-static-folder = "0.25.0"
silkenweb = "0.5.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "uuid"]}
thiserror = "1.0.47"
tokio = "1.28.2"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.3", features = ["fs", "trace"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
